configurable jwkSetUri in starters